--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "file-reader": "^1.1.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-scripts": "2.1.5"
+    "react-easy-table": "^1.0.3",
+    "react-file-reader": "^1.1.4",
+    "react-scripts": "2.1.5",
+    "react-stringify": "^1.0.0",
+    "tokenize-text": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
